Bug 94576 - Cancelling Input of Search Term in Template Manager also Cancels the Whole Manager Dialogue
Summary: Cancelling Input of Search Term in Template Manager also Cancels the Whole Ma...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: Other Windows (All)
: medium minor
Assignee: Tibor Móger
URL:
Whiteboard: target:5.4.0
Keywords: difficultyBeginner, easyHack, skillCpp, topicUI
Depends on:
Blocks:
 
Reported: 2015-09-28 14:18 UTC by Harald Koester
Modified: 2018-01-09 21:03 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2015-09-28 14:18:16 UTC
In order to reproduce the bug:

[1] Open Template Manager.
[2] If template folders are not displayed, click “All Templates”.
[3] Click Search icon. The search line is displayed.
[4] Enter some random letters. If there is no match with existing templates neither templates nor folders are displayed any longer. 
[5] Suppose now you like to find a specific template by browsing through the template folders. Cancel search function with Esc. The whole template manager dialogue is cancelled and you have to open it again. Expected: Only the search function should be terminated with Esc. In almost all cases closing a dialogue with Esc is the right behaviour. But in this special case, at least my automatic reaction is the use of the Esc key in order to display the template folders again.
Comment 1 Buovjaga 2015-10-02 07:52:45 UTC
Yeah.

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)
Comment 2 Samuel Mehrbrodt 2016-05-25 08:57:18 UTC
In the new template manager the save field is always visible.
So I guess that it is now right that Esc closes the dialog.
Comment 3 Harald Koester 2016-08-31 13:30:23 UTC
Checked with version 5.2.0 and Win7. Bug still exists.

Due to the new template manager, the steps are a bit different:

[1] Open Template Manager.
[2] Select "All Applications" and "All Categories”. All templates should be displayed.
[3] Enter some random letters in Search... field . If there is no match with existing templates templates are no longer displayed.
[4] Cancel search function with Esc. The template manager is closed. Expected in this special case: Search string should be deleted and all templates should be displayed.

Hence set bach to NEW.
Comment 4 Samuel Mehrbrodt 2016-11-25 09:02:07 UTC
EasyHack. The code is in http://opengrok.libreoffice.org/xref/core/sfx2/source/doc/templatedlg.cxx
Comment 5 Commit Notification 2016-12-20 20:23:30 UTC
Tibor Móger committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=86519381cd6c7df26087461680f5467aacdc89fc

tdf#94576 handle esc keypress on templatemanagerdialog

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Harald Koester 2018-01-09 21:03:50 UTC
Checked with version 5.4.4. Works as expected now. Thanks for fixing.