tdf#94576 handle esc keypress on templatemanagerdialog

SfxTemplateManagerDlg now overrides behaviour of ModalDialog on
EventNotify by checking if the pressed key was esc and
the searchFilter is not empty. In this case instead of
letting ModalDialog close the modal it clears the searchFilter

Change-Id: I90d91a3b152f68b6c8780963d1b95258d9ccf23a